Simulation configuration creation - "Day one" patch
* Added displayed error label if no gc is specified and prohibited
assigning resources in this case
* Prohibited editing process elements when no bpmn file is opened

Bugfixes:
* Fixed whole import system (gc and pm interdependencies)
* Chosen process model path was displayed in wrong label
* Gateways could not be loaded when no process model was specified
* Startevents were not loaded correctly when importing an existing sc
due to duplication
* BPMN Elements were not loaded correctly, if an existing sc was
imported and the business model didn't fit to it's original
* Display bug when no distribution was specified


Misc Changes:
+ Improved error notice with signal color
+ Added forall method to ListChooserPanel class, as it is needed
+ Added DEBUG variable to ScyllaGUI, to switch between using and
developing more swiftly
+ Added number of instances as maximum limit to assignments

And much more